<resources>
    <string name="app_name">Your App</string>

    <!-- Strings related to login -->

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Strings Transition -->
    <string name="transition_logo">transition_logo</string>
    <string name="transition_button_sign_up">transition_button_sign_up</string>
    <string name="transition_edit_text_email">transition_edit_text_email</string>
    <string name="transition_edit_text_pass">transition_edit_text_pass</string>
    <string name="transition_card_view">transition_card_view</string>

    <!--Strings view Activities-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="action_login">LOGIN</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_up_google">Sign up with Google</string>
    <string name="action_sign_up_facebook">Sign up with Facebook</string>
    <string name="action_login_google">Login with Google</string>
    <string name="action_login_facebook">Login with Facebook</string>

    <string name="btn_link_to_register">Not a member? <i><b>Sign up now.</b></i></string>
    <string name="btn_link_to_login">Already registered! <i><b>Login Me.</b></i></string>



    <!--News-->
    <string name="title1">Why robots will build the cities of the future</string>
    <string name="body1">Robotics is one area poised to benefit from coming superfast 5G mobile networks. Better connectivity will make it easier for multiple robots to co-operate.</string>

    <string name="title2">DNA project to decode \'all complex life\' on Earth</string>
    <string name="body2">Dr Jim Smith, director of science at the Wellcome Trust described the mission as timely, adding that it was "incumbent upon human beings to raise awareness of biodiversity".</string>

    <string name="title3">Is the Arctic set to become a main shipping route?</string>
    <string name="body3">Climate change is increasingly opening up the Northwest Passage, an Arctic sea route north of the Canadian mainland.</string>

    <string name="title4">Reality Check: Which form of renewable energy is cheapest?</string>
    <string name="body4">Costs for offshore wind power have decreased with the introduction of a new system which forces companies to bid for financial support from the government in auctions. The auctions, due to take place every two years, allow energy firms to bid for contracts that guarantee a minimum price for the power they will sell.</string>
</resources>
